--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "ajv": "^6.0.0",
+    "axios": "^0.18.0",
     "upgrade": "^1.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
