--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.15",
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0",
     "webpack-cli": "^3.1.2"
   },
   "devDependencies": {
